[package]
name = "brdgme-game"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]

[dependencies]
brdgme-std = { git = "https://github.com/brdgme/std.git" }
brdgme-markup = { git = "https://github.com/brdgme/markup.git" }
chrono = "*"
serde = "*"
serde_derive = "*"
combine = "*"
