[package]
name = "brdgme-game"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]

[dependencies]
brdgme-markup = { git = "https://github.com/brdgme/markup.git" }
chrono = { version = "0.3.0", features = ["serde"] }
serde = "0.9.13"
serde_derive = "0.9.13"
combine = "2.3.1"
error-chain = "0.10.0"