[package]
name = "brdgme-game"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]

[dependencies]
brdgme-markup = { git = "https://github.com/brdgme/markup.git" }
chrono = { version = "0.3.1", features = ["serde"] }
serde = "1.0.0"
serde_derive = "1.0.0"
combine = "2.3.1"
error-chain = "0.10.0"
rand = "0.3.15"
log = "0.3.7"
unicase = "1.4.0"